# Nitinislearning

./: .gitignore  .ignore  Dockerfile  README.md  cpp_cheatsheet.md
.devcontainer/: .tmux.conf  Dockerfile  devcontainer.json  devcontainr
Education/Misc/: Self Development .xmind
Education/c_discussions/: circular_linked_list.c
Education/tortoise/: circle.py  division.py
InterviewDataCapture/CPP/: Concepts.md
InterviewDataCapture/CPP/basics/: CMakeLists.txt  binSample.cpp  hospitalSchedule.cpp
InterviewDataCapture/java/: DoctorCounter.java  Readme.md
InterviewDataCapture/python/CB/: keyValue_stored.py
c_ds/designguru/: CMakeLists.txt
c_ds/designguru/cpp/: anagram.cpp  palindrome.cpp  vowel_reverse.cpp
c_ds/designguru/cpp/MiscPuzzles/2pointers/: CMakeLists.txt  backspaceRemove.cpp  dutchNationalFlag.cpp  minWindowSort.cpp  quardSum.cpp  quardSum_old.cpp  quardSum_ref.cpp  trippletsLess.cpp  trippletsLess_old.cpp  trippletsLess_ref.cpp
c_ds/designguru/cpp/MiscPuzzles/CodingTest/: CMakeLists.txt  lru.h  lru_run.cpp  lru_test.cpp
c_ds/designguru/cpp/MiscPuzzles/match_engine/: CMakeLists.txt  inputProcessor.cpp  inputProcessor.h  main.cpp  match_engine.cpp  match_engine_23.cpp  order.cpp  order.h  orderBook.cpp  orderBook.h  tradeHandler.cpp  tradeHandler.h
c_ds/designguru/cpp/graph_traversal/: CMakeLists.txt  bus_routes_my.cpp  bus_routes_ref.cpp  noOfProvinces_my.cpp  noOfProvinces_ref.cpp  path_exists_my.cpp  path_exists_ref.cpp  save_node_my.cpp  save_node_ref.cpp
c_ds/designguru/python/: job_scheduler.py  keyvalue_stored_tries.py  mini_banking.py  rate_limiter.py
c_ds/designguru/python/trippletLess/: CMakeLists.txt  trippletSum_my.cpp
c_ds/graph/: Dockerfile  Makefile  a.out  docker-compose.debug.yml  graph_adj_list.c  graph_adt.cpp  graph_adt.h  graph_cc.h  graph_io.h  main.cpp
c_ds/leet_code/: intersect.py  merge_sort_array.py
c_ds/multithread/: locklessqueue.h
c_ds/needcode/: min_rotate_sort_array.py
c_ds/reflections/: issues_reflections.md
c_ds/templateMetaProg/: readme.md
c_ds/templatesUse/: CMakeLists.txt  curiously_recurring_template.cpp  map_use_learn.cpp  play_priority_queue.cpp  variable_params.cpp  vector_use_learn.cpp
c_ds/train/: CMakeLists.txt  binarysearch_sqrt.cpp  binarysearch_sqrt_2.cpp  check_str_to_time_convert.cpp  crack.cpp  string_toy.cpp  template_int.cpp  tripplets.cpp  tripplets_cg.cpp
c_ds/train/backtrack/: word_search.py
c_ds/train/basics/: CMakeLists.txt  allGoodIndices.cpp  blackBlocks_ref.cpp  blackblocks.cpp  climbstair.cpp  climbstair.py  countAndSay.cpp  countAndSay.py  decode_msg.cpp  decode_msg.py  fibonacii.cpp  fibonacii.py  insertRemoveGetrandom.cpp  longestCommonPrefix.cpp  longestCommonPrefix_ref.cpp  longestCommonPrefix_ref2.cpp  longest_common_prefix.py  max_vol.py  mentionsPerUser.cpp  merge_alternate.cpp  merge_alternate.py  merge_intervals.cpp  merge_intervals.py  movingAverage.cpp  movingAverage.py  permutations.cpp  permutations.py  permutations_ref.py  permutations_substring.py  playStringView.cpp  plus_one.cpp  plus_one.py  points_from_rect.py  randomPickWeighted.cpp  rangeSum.cpp  removeComments.cpp  rotate_image.py  rotate_linklist.py  rotatingStr.cpp  rotatingStr.py  (+3 more)
c_ds/train/boyerMoore/: boyer_moore.py
c_ds/train/dutchSort/: CMakeLists.txt  dutchsort_sol.cpp
c_ds/train/graphs/: dfs_surround.py
c_ds/train/happynumber/: happynumber.py
c_ds/train/heap/: max_profit_projects.py  subarray_median_ref.py
c_ds/train/lc_daily/202051005/: pacific_atlantic_waterflow.py
c_ds/train/linkedList_cycle_circulararray/: cycle_circulararray_my.py
c_ds/train/linkedlist_reversemerge/: linkedlist_reversemerge.py
c_ds/train/misc_questions/: cinema_booking_1.py
c_ds/train/moving_window/: longest_subarr_with_k_distinct_ref.py  max_subarray_sum_my.py  max_subarray_sum_sol.py  smallest_subarray_greater_sum_my.py
c_ds/train/palindrome_linklist/: pal_linkedlist.py  pal_linkedlist_sol.py
c_ds/train/stack_trace/: CMakeLists.txt  stack_trace_capture_sample_1.cpp
c_ds/train/toSortSubarray/: CMakeLists.txt  toSortSubArray_my.cpp  toSortSubArray_sol.cpp
c_ds/train/trippletLess/: trippletSum_sol.cpp
c_ds/train/trippletSum/: CMakeLists.txt  mindifftarget_my.cpp
c_ds/unitTesting/: mylib.cpp  mylib.h
kafka_setup/: docker-compose.yml  kafka-cluster-node.yml  kafka-multi-node.yml  kafka-single-node.yml  readme.md
kafka_setup/kafka_tools/: kafka_ui.yml
kafka_setup/reflections/: rebalance.md
leet_code/: binary_search.py
python/async_concurrent/: asyn_operations.py  async_common.py  async_operations.py  callback_scheduler.py  operations.py  producer_consumer.py  readme.md  scheduled_exmple.py  sequential_example.py  thread_exmple.py  yield_scheduler.py
python/autotrader/: Readme.md  TradingBotOanda.ipynb  auto_trader_2.py  raw_setup.py
python/basic_constructs/: for_else.py  local_rest.py  pass_vs_continue.py  play_context_manager.py  play_dateformat.py  play_db_postgres.py  play_json.py  play_string_split.py
python/ds/: Linkedlist.py  SingleSourceShortestPath.py  binary_tree.py  for_topological.puml  graph.py  graph_adjlist.puml  graph_dict.puml  graph_dict.py  graph_dict_bfs.py  graph_dict_dfs.py  graph_removal_try_output.puml  graph_to_puml.py  linked_list.puml  topological_sort.py  try_graph.py  try_graph_dict.py  weighted_graph.py
python/flask/: flask_hw.py
python/jenkins/: get_version.py
python/metaprog/: play_decorator.py
python/nomad/: connect.py
python/tools/: analyze_patch_log.py  create_fix_sessions_json.py  data_capture.py  oe_sessions_creation_on_multiplicity_30.json
python/wss/: websocket_tester_html.html  wss_client_sample.py  wss_server.py
redis/: CMakeLists.txt  Readme.md
redis/train/: CMakeLists.txt  hw.cpp
reflections/: issues_reflections.md  process_reflections.md
reflections/questions/: buildTreeFromPreInTrav.md  encodeDecodeTree.md  encodeDecodeTreePitfalls.md  neetcode  productExceptSelf.md  reverseKgroups.md
scala/: README.md
scala/neev/: build.sbt
scala_masterclass_udemy/neev/: build.sbt
web/js_crash/: readme.md
(+249 files in other folders)
